# ChangeLog for media-gfx/povray
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.68 2007/07/22 09:50:57 dberkholz Exp $

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  povray-3.6.1-r1.ebuild, povray-3.6.1-r2.ebuild:
  Drop virtual/x11 references.

  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r2.ebuild:
  alpha stable wrt #16473

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  03 Apr 2007; Markus Ullmann <jokey@gentoo.org> povray-3.6.1-r1.ebuild,
  povray-3.6.1-r2.ebuild:
  Update SRC_URI as suggested in bug #173223

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r2.ebuild:
  ia64 stable wrt bug 169473

  10 Mar 2007; nixnut <nixnut@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable on ppc wrt bug 169473

  10 Mar 2007; Timothy Redaelli <drizzt@gentoo.org> Manifest:
  Fix Manifest

  06 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  povray-3.6.1-r2.ebuild:
  Stable on sparc wrt #169473

  06 Mar 2007; Marcus D. Hanwell <cryos@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable on amd64, bug 169473.

  06 Mar 2007; Markus Rothe <corsair@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable on ppc64; bug #169473

  06 Mar 2007; Jeroen Roovers <jer@gentoo.org> povray-3.6.1-r2.ebuild:
  Stable for HPPA (bug #169473).

  05 Mar 2007; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r2.ebuild:
  x86 stable wrt bug 169473

  05 Mar 2007; Anant Narayanan <anant@gentoo.org> +povray-3.6.1-r1.ebuild:
  Big oops, Add back stable ebuild.

*povray-3.6.1-r2 (04 Mar 2007)

  04 Mar 2007; Anant Narayanan <anant@gentoo.org> +files/povray-3.6.1-find-egrep.patch,
  -povray-3.6.1-r1.ebuild, +povray-3.6.1-r2.ebuild:
  Fix autoconf weirdness (patch thanks to David Leverton),
  bump to r2; this closes bug #142498

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.
