@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX povray-3.6.1-configure.patch 1081 RMD160 92dd3995691d567f6ae24b38bea1f31b9803b5b3 SHA1 c4c9fe03b8e24b8c03ed93abd484cfff3abd8dfc SHA256 a3278c6e43c30daa5a2edb7de3726e57f732f9c387b2d838cb41f3c7f14f773b
 MD5 1704c587f882e616eb4b80dc64a07be5 files/povray-3.6.1-configure.patch 1081
 RMD160 92dd3995691d567f6ae24b38bea1f31b9803b5b3 files/povray-3.6.1-configure.patch 1081
@@ -11,14 +14,14 @@ EBUILD povray-3.6.1-r1.ebuild 1394 RMD160 3b840001acc9988e9344453c29e050d68b01fb
 MD5 1e35b7ff548344264f99b0fe12f85bfb povray-3.6.1-r1.ebuild 1394
 RMD160 3b840001acc9988e9344453c29e050d68b01fb1d povray-3.6.1-r1.ebuild 1394
 SHA256 b5679f1b6723c521e535f237825bb743c9ce0f4938878dc8727864aad8ea1370 povray-3.6.1-r1.ebuild 1394
-EBUILD povray-3.6.1-r2.ebuild 1449 RMD160 c86c4e0b7f826346de48e2f9fc68cac41c615194 SHA1 bbe903457d66b59678bd10aa0e1b4cc8ddf36f37 SHA256 d5f58433886627c94d5e77f5b782a8248f1c489d6ae8cb611a5d0ac396470729
-MD5 733c8064d8ac5ec51dad28026cedd550 povray-3.6.1-r2.ebuild 1449
-RMD160 c86c4e0b7f826346de48e2f9fc68cac41c615194 povray-3.6.1-r2.ebuild 1449
-SHA256 d5f58433886627c94d5e77f5b782a8248f1c489d6ae8cb611a5d0ac396470729 povray-3.6.1-r2.ebuild 1449
-MISC ChangeLog 10018 RMD160 f149bf68661e21248515d21f8c0614d7f5bb71a9 SHA1 8a032cdc6cbc8c8acac2fd414ea39e038f546a4d SHA256 19e782bb4789f11cbe60bf1197de67cf9b0869fb46476dcbcd672d3764d117e1
-MD5 343d670571c700432b5f5b614b81d515 ChangeLog 10018
-RMD160 f149bf68661e21248515d21f8c0614d7f5bb71a9 ChangeLog 10018
-SHA256 19e782bb4789f11cbe60bf1197de67cf9b0869fb46476dcbcd672d3764d117e1 ChangeLog 10018
+EBUILD povray-3.6.1-r2.ebuild 1499 RMD160 8a77112ff95943432b7c07655fa8e908b9c43ae2 SHA1 60db175d9140a897194b67d238300506629ffb01 SHA256 10a76da7f2441b08e48f05f0fd6230e3cf312ba64a411e9b36f7c1c97a0bdf87
+MD5 2e8cb55e2d43877707ce6e451cba3de6 povray-3.6.1-r2.ebuild 1499
+RMD160 8a77112ff95943432b7c07655fa8e908b9c43ae2 povray-3.6.1-r2.ebuild 1499
+SHA256 10a76da7f2441b08e48f05f0fd6230e3cf312ba64a411e9b36f7c1c97a0bdf87 povray-3.6.1-r2.ebuild 1499
+MISC ChangeLog 10210 RMD160 9f0c85e9b74c79ffb66fb4d53d38f6536808c265 SHA1 6d73a38e8aa168b3ddf6ecccf3beb881925c6eea SHA256 412b0d05c56bb732aa05246fb2aa4213b96ba6aad76355a403dadf272021711c
+MD5 e35aa47d795f61388016f75faa605aea ChangeLog 10210
+RMD160 9f0c85e9b74c79ffb66fb4d53d38f6536808c265 ChangeLog 10210
+SHA256 412b0d05c56bb732aa05246fb2aa4213b96ba6aad76355a403dadf272021711c ChangeLog 10210
 MISC metadata.xml 294 RMD160 bae4e1f3172f4d8fd5669b76b5b1462810c302ee SHA1 f94b56cc666fabe71b52dccf7fadafd518e994fb SHA256 2847846cdca51f81a6b8cae132297e3591d45b52f44da39ac51de24e2dfa3eea
 MD5 3ff030e5bd6068041e77097337c9a3e7 metadata.xml 294
 RMD160 bae4e1f3172f4d8fd5669b76b5b1462810c302ee metadata.xml 294
@@ -29,3 +32,10 @@ SHA256 fa953ce75c6d204f79fa2294df24ffdb069a46f4d45a06a750b933d4f4d4806f files/di
 MD5 87799fe3414bad25c5ff763f35b0f4d8 files/digest-povray-3.6.1-r2 244
 RMD160 8c77b81430307eb251bc9581d70156b07f66a6db files/digest-povray-3.6.1-r2 244
 SHA256 fa953ce75c6d204f79fa2294df24ffdb069a46f4d45a06a750b933d4f4d4806f files/digest-povray-3.6.1-r2 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHB/laiqiDRvmkBmIRAglAAKDAa/bpoF6uXd5A49qCJRsNQXWYdQCg7CNV
+F9IxKFKN78qJ2i2s76aB0gw=
+=arWc
+-----END PGP SIGNATURE-----
