@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/povray
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.68 2007/07/22 09:50:57 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.69 2007/10/06 21:08:36 dirtyepic Exp $
+
+  06 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> povray-3.6.1-r2.ebuild:
+  Use user CFLAGS, fix broken get-flag test that always returned true and
+  striped -fomit-frame-pointer, fix quoting.
 
   22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
   povray-3.6.1-r1.ebuild, povray-3.6.1-r2.ebuild:
